# ICRIN

./: .gitignore  LICENSE  README.md  catkin_clean.sh  catkin_make.sh  icrin.sublime-project  index.html  params.json
icrin/amcl_wrapper/: CMakeLists.txt  package.xml
icrin/amcl_wrapper/include/amcl_wrapper/: amcl_wrapper.hpp
icrin/amcl_wrapper/src/: amcl_wrapper.cpp
icrin/bumper_wrapper/: CMakeLists.txt  package.xml
icrin/driver_env/: CMakeLists.txt  package.xml
icrin/driver_env/include/driver_env/: driver_env.hpp
icrin/driver_env/src/: .driver_env.cpp.swp  driver_env.cpp
icrin/environment/: CMakeLists.txt  package.xml
icrin/environment/include/environment/: environment.hpp
icrin/environment/src/: environment.cpp
icrin/experiment/: CMakeLists.txt  package.xml
icrin/experiment/include/experiment/: console.hpp  experiment.hpp
icrin/experiment/src/: experiment.cpp
icrin/icrin/: CMakeLists.txt  package.xml
icrin/icrin/cfg/: .visualizer.yaml.swp  blackout.yaml  experiment.yaml  goals.yaml  megatron.yaml  model.yaml  robot.yaml  rvo_params.yaml  starscream.yaml  thundercracker.yaml  virtual.yaml  visualizer.yaml
icrin/icrin/launch/: driver.launch  environment.launch  experiment.launch  full.launch  model.launch  robot.launch  visualizer.launch
icrin/icrin_msgs/common_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/common_msgs/srv/: Enable.srv  GetFloat.srv  GetSize.srv
icrin/icrin_msgs/driver_env_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/driver_env_msgs/msg/: Car.msg  Cars.msg
icrin/icrin_msgs/environment_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/environment_msgs/msg/: EnvironmentData.msg
icrin/icrin_msgs/experiment_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/experiment_msgs/msg/: Goals.msg  Plan.msg  Plans.msg
icrin/icrin_msgs/experiment_msgs/srv/: SetGoal.srv  SetPlan.srv
icrin/icrin_msgs/model_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/model_msgs/msg/: AgentPrediction.msg  AwareHypothesis.msg  GoalEstimate.msg  GoalHypothesis.msg  GoalInference.msg  InteractivePrediction.msg  ModelHypotheses.msg  ModelInfering.msg
icrin/icrin_msgs/planner_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/planner_msgs/srv/: SetupNewPlanner.srv  SetupRVOPlanner.srv
icrin/icrin_msgs/robot_comms_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/rvo_planner_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/rvo_wrapper_msgs/: CMakeLists.txt  package.xml
icrin/icrin_msgs/tracker_msgs/: CMakeLists.txt  package.xml
icrin/logger/: CMakeLists.txt  package.xml
icrin/model/: CMakeLists.txt  package.xml
icrin/model/src/: .model_wrapper.cpp.swp  model.cpp  model_wrapper.cpp  sim_wrapper.cpp
icrin/planner/: CMakeLists.txt  package.xml
icrin/planner/src/: planner.cpp  planner_wrapper.cpp  ros_navigation.cpp  rvo_planner.cpp
icrin/robot_comms/: CMakeLists.txt  package.xml
icrin/robot_comms/src/: robot_comms.cpp
icrin/rvo_wrapper/: CMakeLists.txt  package.xml
icrin/rvo_wrapper/src/: Agent.cpp  Circle.cpp  KdTree.cpp  Obstacle.cpp  RVOSimulator.cpp  rvo_example.cpp  rvo_wrapper.cpp
icrin/tracker/: CMakeLists.txt  package.xml
icrin/tracker/src/: tracker.cpp
icrin/visualizer/: CMakeLists.txt  package.xml
icrin/visualizer/src/: .visualizer.cpp.swp  visualizer.cpp
(+59 files in other folders)
