<?xml version="1.0"?>
<package>
  <name>driver_env</name>
  <version>0.0.0</version>
  <description>The driver_env package</description>

  <maintainer email="alex.bordallo@gmail.com">Alejandro Bordallo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>driver_env_msgs</build_depend>
  <run_depend>driver_env_msgs</run_depend>
  <build_depend>environment_msgs</build_depend>
  <run_depend>environment_msgs</run_depend>
  <build_depend>model_msgs</build_depend>
  <run_depend>model_msgs</run_depend>

  <export>

  </export>
</package>
