<?xml version="1.0"?>
<package>
  <name>icrin</name>
  <version>0.0.0</version>
  <description>The icrin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alex.bordallo@gmail.com">Alejandro Bordallo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/icrin</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl_wrapper</build_depend>
  <build_depend>environment</build_depend>
  <build_depend>experiment</build_depend>
  <build_depend>model</build_depend>
  <build_depend>planner</build_depend>
  <build_depend>robot_comms</build_depend>
  <build_depend>rvo_wrapper</build_depend>
  <build_depend>tracker</build_depend>
  <run_depend>amcl_wrapper</run_depend>
  <run_depend>environment</run_depend>
  <run_depend>experiment</run_depend>
  <run_depend>model</run_depend>
  <run_depend>planner</run_depend>
  <run_depend>robot_comms</run_depend>
  <run_depend>rvo_wrapper</run_depend>
  <run_depend>tracker</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
